# cybersub

./: Cargo.toml  README.md  start_server.bat  start_server.sh
.github/workflows/: rust.yml
docs/: cybersub.wasm  gl.js  index.html  quad_net.js  quad_url.js  sapp_jsutils.js
docs/bunyip/: objects.yaml  wires.yaml
docs/dugong/: objects.yaml  wires.yaml
docs/proto/1/: cybersub.js  cybersub_bg.wasm  index.html
src/: app.rs  client.rs  collisions.rs  draw.rs  draw_quad.rs  game_state.rs  highlight.glsl  input.rs  lib.rs  main.rs  objects.rs  pointlight.glsl  resources.rs  rocks.glsl  rocks.rs  saveload.rs  server.rs  shadows.glsl  shadows.rs  sonar.glsl  sonar.rs  ui.rs  update.rs  vertex.glsl  wall.glsl  walls.glsl  water.glsl  water.rs  water_old.glsl  wires.glsl  wires.rs
src/game_state/: collisions.rs  objects.rs  rocks.rs  sonar.rs  state.rs  update.rs  water.rs  wires.rs
