[package]
name = "cybersub"
version = "0.1.0"
authors = ["Andrei Vasiliu <whyte.vuhuni@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

# [lib]
# crate-type = ["cdylib", "rlib"]

[dependencies]
egui = "0.13.1"
egui-macroquad = "0.5.0"
macroquad = { version = "0.3.6", default-features = false }
serde = { version = "1.0", features = ["derive"] }
bincode = "1.3"
flate2 = "1.0"
png = "0.16"

[profile.release]
opt-level = 2 # fast and small wasm
