[package]
name = "cybersub"
version = "0.1.0"
authors = ["Andrei Vasiliu <whyte.vuhuni@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

# [lib]
# crate-type = ["cdylib", "rlib"]

[dependencies]
egui = "0.14.0"
egui-macroquad = "0.6.0"
macroquad = { version = "0.3.8", default-features = false }
# quad-net: https://github.com/not-fl3/quad-net/pull/2
quad-net = { git = "https://github.com/andreivasiliu/quad-net", branch = "big-messages" }
serde = { version = "1.0", features = ["derive", "rc"] }
bincode = "1.3"
flate2 = "1.0"
png = "0.17"
serde_yaml = "0.8.4"
crossbeam = { version = "0.8.1", features = ["crossbeam-channel"] }
bus = "2.2.3"

[profile.release]
opt-level = 2 # fast and small wasm
